// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/item-details/RetentionPolicy should not render policy expiration 1`] = `
<Fragment>
  <FormattedMessage
    defaultMessage="Policy"
    id="boxui.itemDetails.retentionPolicyDescription"
    tagName="dt"
  />
  <dd>
    Policy one
  </dd>
</Fragment>
`;

exports[`features/item-details/RetentionPolicy should render null when retentionPolicyDescription is not specified 1`] = `""`;

exports[`features/item-details/RetentionPolicy should render policy expiration 1`] = `
<Fragment>
  <FormattedMessage
    defaultMessage="Policy"
    id="boxui.itemDetails.retentionPolicyDescription"
    tagName="dt"
  />
  <dd>
    Policy one
  </dd>
  <FormattedMessage
    defaultMessage="Policy Expiration"
    id="boxui.itemDetails.retentionPolicyExpiration"
    tagName="dt"
  />
  <dd>
    <FormattedDate
      day="numeric"
      month="short"
      value={2017-03-19T05:06:31.883Z}
      year="numeric"
    />
  </dd>
</Fragment>
`;

exports[`features/item-details/RetentionPolicy should render retention policy extend button 1`] = `
<Fragment>
  <FormattedMessage
    defaultMessage="Policy"
    id="boxui.itemDetails.retentionPolicyDescription"
    tagName="dt"
  />
  <dd>
    Retention
  </dd>
  <FormattedMessage
    defaultMessage="Policy Expiration"
    id="boxui.itemDetails.retentionPolicyExpiration"
    tagName="dt"
  />
  <dd>
    <FormattedDate
      day="numeric"
      month="short"
      value={2017-03-19T05:06:31.883Z}
      year="numeric"
    />
    <PlainButton
      className="lnk bdl-RetentionLink"
      data-target-id="PlainButton-retentionPolicyExtendButton"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Extend"
        id="boxui.itemDetails.retentionPolicyExtend"
      />
    </PlainButton>
  </dd>
</Fragment>
`;
